# sd_qsci

./: README.md  pyproject.toml
.github/workflows/: docs.yml
.junie/: guidelines.md
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: index.html  sd_qsci.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/api/: modules.html  sd_qsci.hamiltonian.html  sd_qsci.html
docs/source/: conf.py
docs/source/api/: sd_qsci.rst
notebooks/dev/: 01_verify_unitary_qc.ipynb  02_verify_unitary_qc.ipynb  hamiltonian_tutorial.ipynb
research/: 00_profile.py  00_profile.py.lprof  01_h4_chain.py  02_h6_lattice.py  03_h6_lattice_n_dets.py  03b_h6_lattice_weights.py  03c_h6_chain.py  04a_aws_devices.py  04b_aws_trial.py  05a_h3_sto3g.py  05b_h3_sto6g.py  06_h3_basis_comparison.py  06_h3_basis_comparison_test.py  07_h6_chain_bisect.py  08_spin_recovery.py  09a_lucj_comparison.py
research/data/03_h6_lattice_n_dets/: h6_qsci_convergence.csv  h6_summary.csv
research/data/03b_h6_lattice_weights/: h6_qsci_convergence.csv  h6_summary.csv
research/data/07_h6_chain_bisect/: h6_qsci_convergence.csv  h6_summary.csv
research/data/08_spin_recovery/bond_length_2.00_spin_symm/: h6_qsci_convergence.csv  h6_summary.csv
research/data/09a_lucj_comparison/bond_length_2.00/: h6_qsci_convergence.csv  h6_summary.csv
src/sd_qsci/: __init__.py  analysis.py  circuit.py  energy.py  spin.py  utils.py
src/sd_qsci/hamiltonian/: __init__.py  checks.py  fermion_hamiltonian.py  fermion_ops.py  pyscf_glue.py  spin_blocks.py
tests/: test_circuit.py  test_hamiltonian.py  test_known_pitfalls.py  test_qc.py
(+10 files in other folders)
