[project]
name = "sd-qsci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fredd", email = "freddieburns@hotmail.co.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pyscf>=2.11.0",
    "pytest>=8.4.2",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
    "scipy>=1.16.3",
]

[project.scripts]
sd-qsci = "sd_qsci:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.0.2",
]
